# src/api/openapi/MediaServer.Api_native.json
@@ -1612,6 +1612,7 @@
           "decision",
           "url",
           "signalling",
+          "sourceDynamicRange",
           "reason"
         ],
         "type": "object",
@@ -1636,6 +1637,12 @@
             ]
           },
           "signalling": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "sourceDynamicRange": {
             "type": [
               "null",
               "string"
@@ -1925,6 +1932,7 @@
         "required": [
           "items",
           "removedIds",
+          "changedPreferenceScopes",
           "cursor",
           "hasMore",
           "resetRequired"
@@ -1938,6 +1946,12 @@
             }
           },
           "removedIds": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "changedPreferenceScopes": {
             "type": "array",
             "items": {
               "type": "string"
